--- a/Android-rat/WEB PANEL/index.html
+++ b/Android-rat/WEB PANEL/index.html
@@ -14,7 +14,7 @@
 
 const  firebaseConfig = {
 apiKey: "API KEY",
-authDomain: "AUTH DOMAIN",
+authDomain: "ratt-9a708.firebaseapp.com",
 databaseURL: "DATABSE URL",
 projectId: "PROJECT ID",
 storageBucket: "BUCKET URL",
